--- a/index.html
+++ b/index.html
@@ -172,15 +172,17 @@
             </form>
           </div>
         </li>
-        <li class="button-header">
-          <div>
-            <button type="button" id="openModalBtn">login</button>
-            <button type="button">cadastre-se</button>
-          </div>
+        <li class="user-button">
+          <a href="../user/historic/index.html">
+            <div class="flex user-page">
+              <i class="fa-solid fa-user fa-2x"></i>
+            </div>
+          </a>
         </li>
       </ul>
     </nav>
   </header>
+
   <main class="grid-container">
     <div class="container">
         
@@ -267,8 +269,8 @@
     </div>
   </div>
 
-  <script src="./script.js"></script>
   <script src="./sidebar/sidebar.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
