colocando links de js em todas as paginas

--- a/login-page/topics.html
+++ b/login-page/topics.html
@@ -16,7 +16,8 @@
     <header>
         <nav>
             <ul class="nav flex">
-                <li><a class="nav-btn flex" href="./index.html"><img src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px"></a>
+                <li><a class="nav-btn flex" href="./index.html"><img src="../img/logomarca-png.png"
+                            alt="Logomarca NexusStudium" width="100px"></a>
                 </li>
                 <li class="search-bar">
                     <div>
@@ -105,9 +106,9 @@
             <p> Site feito por: Lucas Morais - Marcos Vinícius - Douglas Balbino - João Victor - Adenilça Souza</p>
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
-
-        <script src="../script.js"></script>
     </footer>
+    <script src="../sidebar/sidebar.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
