--- a/user/historic/index.html
+++ b/user/historic/index.html
@@ -148,6 +148,7 @@
         </div>
     </div>
 
+    <script src="../../sidebar/sidebar.js"></script>
     <script src="../../script.js"></script>
 </body>
 
