--- a/user-settings/user-security/index.html
+++ b/user-settings/user-security/index.html
@@ -134,6 +134,9 @@
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
     </footer>
+
+    <script src="../../sidebar/sidebar.js"></script>
+    <script src="../../script.js"></script>
 </body>
 
 </html>
