--- a/user/who-follow/index.html
+++ b/user/who-follow/index.html
@@ -210,6 +210,7 @@
         </div>
     </div>
 
+    <script src="../../sidebar/sidebar.js"></script>
     <script src="../../script.js"></script>
 </body>
 
