--- a/user-settings/user-video-player/index.html
+++ b/user-settings/user-video-player/index.html
@@ -5,38 +5,185 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../components/header-nav/header.css">
+    <link rel="stylesheet" href="../../components/sidebar/sidebar.css">
+    <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Reprodução de Vídeos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <script src="https://unpkg.com/akar-icons-fonts"></script>
+    <title>Nexus Studium</title>
 </head>
 
 <body>
+    <aside class="sidebar ocult-sidebar">
+        <header class="flex">
+            <img src="../../img/logomarca-png.png" width="150px" height="150px" />
+        </header>
+        <ul>
+            <li>
+                <a href="#"><button type="button" onclick="onClick(this)">
+                        <i class="ai-home-alt1"></i>
+                        <p>Início</p>
+                    </button></a>
+            </li>
+            <li>
+                <a href="../user/who-follow/index.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-person-check"></i>
+                        <p>Quem eu sigo</p>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <button type="button" onclick="onClick(this)">
+                    <i class="ai-book-open"></i>
+                    <p>Artigos</p>
+                    <i class="ai-chevron-down-small"></i>
+                </button>
+                <div class="sub-menu">
+                    <ul>
+                        <li>
+                            <button type="button">Display</button>
+                        </li>
+                        <li>
+                            <button type="button">Appearance</button>
+                        </li>
+                        <li>
+                            <button type="button">Preferences</button>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <button type="button" onclick="onClick(this)">
+                    <i class="ai-folder-add"></i>
+                    <p>Exercícios</p>
+                    <i class="ai-chevron-down-small"></i>
+                </button>
+                <div class="sub-menu">
+                    <ul>
+                        <li>
+                            <button type="button">Article</button>
+                        </li>
+                        <li>
+                            <button type="button">Document</button>
+                        </li>
+                        <li>
+                            <button type="button">Video</button>
+                        </li>
+                        <li>
+                            <button type="button">Presentation</button>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <a href="../doug/comunity/comunity.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-people-group"></i>
+                        <p>Comunidade</p>
+                        <i class="ai-chevron-down-small"></i>
+                    </button>
+                </a>
+                <div class="sub-menu">
+                    <ul>
+                        <li>
+                            <button type="button">Avatar</button>
+                        </li>
+                        <li>
+                            <button type="button">Theme</button>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <a href="../user/historic/index.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-history"></i>
+                        <p>Histórico</p>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="../user/favorite-roads/index.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-heart"></i>
+                        <p>Trilhas Favoritas</p>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="../user/historic/index.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-statistic-up"></i>
+                        <p>Progresso</p>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="./doug/help/help-page.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-question"></i>
+                        <p>Ajuda</p>
+                    </button>
+                </a>
+            </li>
+            <li>
+                <button type="button" onclick="onClick(this)">
+                    <i class="ai-circle-plus"></i>
+                    <p>Feedback</p>
+                </button>
+            </li>
+            <li>
+                <button type="button" onclick="onClick(this)">
+                    <i class="ai-language"></i>
+                    <p>Idiomas</p>
+                </button>
+            </li>
+            <li>
+                <a href="../user-settings/user-information/index.html">
+                    <button type="button" onclick="onClick(this)">
+                        <i class="ai-gear"></i>
+                        <p>Configurações</p>
+                    </button>
+                </a>
+            </li>
+        </ul>
+    </aside>
     <header>
         <nav>
-            <ul class="grid-header">
-                <li class="menu-btn">
-                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
+            <ul class="nav flex">
+                <li class="nav-btn flex"><img id="showMenu" src="../../img/logomarca-png.png"
+                        alt="Logomarca NexusStudium" width="100px">
                 </li>
                 <li class="search-bar">
                     <div>
                         <form class="bg-search">
-                            <button class="search-button" type="submit"><i
-                                    class="search-icon fa-2x fa-solid fa-magnifying-glass"></i></button>
+                            <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
+                                        src="../../img/searchIcon.svg" alt=""></i></button>
                             <input class="search-input" type="text" placeholder="O que você quer aprender?">
                         </form>
                     </div>
                 </li>
                 <li class="user-button">
-                    <a href="../../user/historic/index.html"><div class="flex user-page">
-                        <i class="fa-solid fa-user fa-2x"></i>
-                    </div></a>
+                    <a href="../user/historic/index.html">
+                        <div class="flex user-page">
+                            <i class="fa-solid fa-user fa-2x"></i>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main class="grid-container">
+    <main class="grid-container-user">
         <section class="flex left-card">
             <div class="flex head-user">
                 <div class="user">
@@ -45,16 +192,24 @@
                 <div class="user-name flex"><em>NOME DO USUÁRIO</em></div>
             </div>
             <div class="flex select-btn"><i class="fa-regular fa-address-card fa-2x"></i>
-                <a href="../user-information/index.html"><p>Informações Pessoais</p></a>
+                <a href="../user-information/index.html">
+                    <p>Informações Pessoais</p>
+                </a>
             </div>
             <div class="flex select-btn"><i class="fa-solid fa-shield-halved fa-2x"></i>
-               <a href="../user-security/index.html"><p>Segurança</p></a>
+                <a href="../user-security/index.html">
+                    <p>Segurança</p>
+                </a>
             </div>
             <div class="flex select-btn"><i class="fa-solid fa-handshake-angle fa-2x"></i>
-                <a href="../user-signature/index.html"><p>Assinatura Nexus</p></a>
+                <a href="../user-signature/index.html">
+                    <p>Assinatura Nexus</p>
+                </a>
             </div>
             <div class="flex select-btn"><i class="fa-regular fa-circle-play fa-2x"></i>
-                <a href="#"><p>Reprodução de Vídeos</p></a>
+                <a href="#">
+                    <p>Reprodução de Vídeos</p>
+                </a>
             </div>
         </section>
         <aside class="flex right-card">
@@ -63,23 +218,22 @@
                 <div class="flex bg-label">
                     <label for="seu_nome">Mostrar Legendas</label>
                 </div>
-                <input class="full-input" type="text" name="seu_nome" id="seu_nome"
-                    placeholder="Ativado" readonly>
+                <input class="full-input" type="text" name="seu_nome" id="seu_nome" placeholder="Ativado" readonly>
 
                 <div class="wrap">
                     <div class="row">
                         <div class="flex bg-half-label">
                             <label for="email_rec">Reprod. Automática</label>
                         </div>
-                        <input class="half-input" type="text" name="born_date" id="born_date"
-                            placeholder="Ativado" readonly>
+                        <input class="half-input" type="text" name="born_date" id="born_date" placeholder="Ativado"
+                            readonly>
                     </div>
                     <div class="row">
                         <div class="flex bg-half-label">
                             <label for="gender">Prévia de Vídeo</label>
                         </div>
-                        <input class="half-input" type="text" name="gender" id="gender"
-                            placeholder="Desativado" readonly>
+                        <input class="half-input" type="text" name="gender" id="gender" placeholder="Desativado"
+                            readonly>
                     </div>
                 </div>
                 <div class="flex bg-label">
@@ -91,27 +245,25 @@
                         <div class="flex bg-half-label">
                             <label for="tel-1">Velocidade Padrão</label>
                         </div>
-                        <input class="half-input" type="tel" name="tel" id="tel-1"
-                            placeholder="1.00x" readonly>
+                        <input class="half-input" type="tel" name="tel" id="tel-1" placeholder="1.00x" readonly>
                     </div>
                     <div class="row">
                         <div class="flex bg-half-label">
                             <label for="tel-2">Iniciar em Tela Cheia</label>
                         </div>
-                        <input class="half-input" type="tel" name="tel" id="tel-2"
-                            placeholder="Desativado" readonly>
+                        <input class="half-input" type="tel" name="tel" id="tel-2" placeholder="Desativado" readonly>
                     </div>
                 </div>
 
                 <div class="flex bg-label">
                     <label for="email_rec">Criar Atalhos</label>
                 </div>
-                <input class="full-input" type="text" name="email" id="email_rec" placeholder="Clique aqui para escolher seus atalhos...">
+                <input class="full-input" type="text" name="email" id="email_rec"
+                    placeholder="Clique aqui para escolher seus atalhos...">
                 <div class="flex bg-label">
                     <label for="email_rec2">Vídeo em Pop Up</label>
                 </div>
-                <input class="full-input" type="text" name="email" id="email_rec2"
-                    placeholder="CTRL + I" readonly>
+                <input class="full-input" type="text" name="email" id="email_rec2" placeholder="CTRL + I" readonly>
                 <input class="btn-form" type="submit" value="Salvar Alterações">
             </form>
         </aside>
@@ -134,7 +286,7 @@
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
     </footer>
-    <script src="../../sidebar/sidebar.js"></script>
+    <script src="../../components/sidebar/sidebar.js"></script>
     <script src="../../script.js"></script>
 </body>
 
