--- a/login-page/index.html
+++ b/login-page/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="../sidebar/sidebar.css">
+  <link rel="stylesheet" href="../components/sidebar/sidebar.css">
   <link rel="icon" href="../img/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -250,7 +250,7 @@
     </div>
 
 
-    <script src="../sidebar/sidebar.js"></script>
+    <script src="../components/sidebar/sidebar.js"></script>
   <script src="../script.js"></script>
   </footer>
 </body>
