--- a/user/favorite-roads/index.html
+++ b/user/favorite-roads/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styleUser.css">
+    <link rel="stylesheet" href="../../components/sidebar/sidebar.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -15,12 +16,147 @@
 </head>
 
 <body>
+    <aside class="sidebar ocult-sidebar">
+        <header class="flex">
+          <img src="../../img/logomarca-png.png" width="150px" height="150px" />
+        </header>
+        <ul>
+          <li>
+            <a href="#"><button type="button" onclick="onClick(this)">
+                <i class="ai-home-alt1"></i>
+                <p>Início</p>
+              </button></a>
+          </li>
+          <li>
+            <a href="../user/who-follow/index.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-person-check"></i>
+                <p>Quem eu sigo</p>
+              </button>
+            </a>
+          </li>
+          <li>
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-book-open"></i>
+              <p>Artigos</p>
+              <i class="ai-chevron-down-small"></i>
+            </button>
+            <div class="sub-menu">
+              <ul>
+                <li>
+                  <button type="button">Display</button>
+                </li>
+                <li>
+                  <button type="button">Appearance</button>
+                </li>
+                <li>
+                  <button type="button">Preferences</button>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-folder-add"></i>
+              <p>Exercícios</p>
+              <i class="ai-chevron-down-small"></i>
+            </button>
+            <div class="sub-menu">
+              <ul>
+                <li>
+                  <button type="button">Article</button>
+                </li>
+                <li>
+                  <button type="button">Document</button>
+                </li>
+                <li>
+                  <button type="button">Video</button>
+                </li>
+                <li>
+                  <button type="button">Presentation</button>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="../doug/comunity/comunity.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-people-group"></i>
+                <p>Comunidade</p>
+                <i class="ai-chevron-down-small"></i>
+              </button>
+            </a>
+            <div class="sub-menu">
+              <ul>
+                <li>
+                  <button type="button">Avatar</button>
+                </li>
+                <li>
+                  <button type="button">Theme</button>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="../user/historic/index.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-history"></i>
+                <p>Histórico</p>
+              </button>
+            </a>
+          </li>
+          <li>
+            <a href="../user/favorite-roads/index.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-heart"></i>
+                <p>Trilhas Favoritas</p>
+              </button>
+            </a>
+          </li>
+          <li>
+            <a href="../user/historic/index.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-statistic-up"></i>
+                <p>Progresso</p>
+              </button>
+            </a>
+          </li>
+          <li>
+            <a href="./doug/help/help-page.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-question"></i>
+                <p>Ajuda</p>
+              </button>
+            </a>
+          </li>
+          <li>
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-circle-plus"></i>
+              <p>Feedback</p>
+            </button>
+          </li>
+          <li>
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-language"></i>
+              <p>Idiomas</p>
+            </button>
+          </li>
+          <li>
+            <a href="../user-settings/user-information/index.html">
+              <button type="button" onclick="onClick(this)">
+                <i class="ai-gear"></i>
+                <p>Configurações</p>
+              </button>
+            </a>
+          </li>
+        </ul>
+      </aside>
     <header>
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png"
-                            alt="Logomarca do Nexus Studium"></a>
+                    <img id="showMenu" class="menu-icon" src="../../img/logomarca-png.png"
+                            alt="Logomarca do Nexus Studium">
                 </li>
                 <li class="search-bar">
                     <div>
@@ -165,7 +301,7 @@
         </div>
     </div>
 
-    <script src="../../sidebar/sidebar.js"></script>
+    <script src="../../components/sidebar/sidebar.js"></script>
     <script src="../../script.js"></script>
 </body>
 
