--- a/user-settings/user-signature/index.html
+++ b/user-settings/user-signature/index.html
@@ -18,7 +18,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <title>Nexus Studium</title>
+    <title>Assinatura Nexus</title>
 </head>
 
 <body>
