--- a/user-settings/user-information/index.html
+++ b/user-settings/user-information/index.html
@@ -173,7 +173,7 @@
                     </div>
                 </li>
                 <li class="user-button">
-                    <a href="../user/historic/index.html">
+                    <a href="../../user/historic/index.html">
                         <div class="flex user-page">
                             <i class="fa-solid fa-user fa-2x"></i>
                         </div>
