--- a/comunity/index.html
+++ b/comunity/index.html
@@ -2,186 +2,233 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="../components/sidebar/sidebar.css">
-    <link rel="icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <title>Comunidade</title>
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="../components/sidebar/sidebar.css">
+  <link rel="icon" href="../img/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <script src="https://unpkg.com/akar-icons-fonts"></script>
+  <link rel="stylesheet" href="./style.css">
+  <title>Comunidade</title>
+</head>
 
 <body>
-    <aside class="sidebar ocult-sidebar">
-        <header class="flex">
-          <img src="../img/logomarca-png.png" width="150px" height="150px" />
-        </header>
-        <ul>
-          <li>
-            <a href="#"><button type="button" onclick="onClick(this)">
-                <i class="ai-home-alt1"></i>
-                <p>Início</p>
-              </button></a>
-          </li>
-          <li>
-            <a href="../user/who-follow/index.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-person-check"></i>
-                <p>Quem eu sigo</p>
-              </button>
-            </a>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-book-open"></i>
-              <p>Artigos</p>
-              <i class="ai-chevron-down-small"></i>
-            </button>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Display</button>
-                </li>
-                <li>
-                  <button type="button">Appearance</button>
-                </li>
-                <li>
-                  <button type="button">Preferences</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-folder-add"></i>
-              <p>Exercícios</p>
-              <i class="ai-chevron-down-small"></i>
-            </button>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Article</button>
-                </li>
-                <li>
-                  <button type="button">Document</button>
-                </li>
-                <li>
-                  <button type="button">Video</button>
-                </li>
-                <li>
-                  <button type="button">Presentation</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a href="../doug/comunity/comunity.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-people-group"></i>
-                <p>Comunidade</p>
-                <i class="ai-chevron-down-small"></i>
-              </button>
-            </a>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Avatar</button>
-                </li>
-                <li>
-                  <button type="button">Theme</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a href="../user/historic/index.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-history"></i>
-                <p>Histórico</p>
-              </button>
-            </a>
-          </li>
-          <li>
-            <a href="../user/favorite-roads/index.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-heart"></i>
-                <p>Trilhas Favoritas</p>
-              </button>
-            </a>
-          </li>
-          <li>
-            <a href="../user/historic/index.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-statistic-up"></i>
-                <p>Progresso</p>
-              </button>
-            </a>
-          </li>
-          <li>
-            <a href="./doug/help/help-page.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-question"></i>
-                <p>Ajuda</p>
-              </button>
-            </a>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-circle-plus"></i>
-              <p>Feedback</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-language"></i>
-              <p>Idiomas</p>
-            </button>
-          </li>
-          <li>
-            <a href="../user-settings/user-information/index.html">
-              <button type="button" onclick="onClick(this)">
-                <i class="ai-gear"></i>
-                <p>Configurações</p>
-              </button>
-            </a>
-          </li>
-        </ul>
-      </aside>
-    <header>
-        <nav>
-            <ul class="nav flex">
-                <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium"
-                        width="100px">
-                </li>
-                <li class="search-bar">
-                    <div>
-                        <form class="bg-search">
-                            <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
-                                        src="../img/searchIcon.svg" alt=""></i></button>
-                            <input class="search-input" type="text" placeholder="O que você quer aprender?">
-                        </form>
-                    </div>
-                </li>
-                <li class="user-button">
-                    <a href="../user/historic/index.html">
-                        <div class="flex user-page">
-                            <i class="fa-solid fa-user fa-2x"></i>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+  <aside class="sidebar ocult-sidebar">
+    <header class="flex">
+      <img src="../img/logomarca-png.png" width="150px" height="150px" />
     </header>
+    <ul>
+      <li>
+        <a href="#"><button type="button" onclick="onClick(this)">
+            <i class="ai-home-alt1"></i>
+            <p>Início</p>
+          </button></a>
+      </li>
+      <li>
+        <a href="../user/who-follow/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-person-check"></i>
+            <p>Quem eu sigo</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-book-open"></i>
+          <p>Artigos</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Display</button>
+            </li>
+            <li>
+              <button type="button">Appearance</button>
+            </li>
+            <li>
+              <button type="button">Preferences</button>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-folder-add"></i>
+          <p>Exercícios</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Article</button>
+            </li>
+            <li>
+              <button type="button">Document</button>
+            </li>
+            <li>
+              <button type="button">Video</button>
+            </li>
+            <li>
+              <button type="button">Presentation</button>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="../doug/comunity/comunity.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-people-group"></i>
+            <p>Comunidade</p>
+            <i class="ai-chevron-down-small"></i>
+          </button>
+        </a>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Avatar</button>
+            </li>
+            <li>
+              <button type="button">Theme</button>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="../user/historic/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-history"></i>
+            <p>Histórico</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="../user/favorite-roads/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-heart"></i>
+            <p>Trilhas Favoritas</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="../user/historic/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-statistic-up"></i>
+            <p>Progresso</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="./doug/help/help-page.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-question"></i>
+            <p>Ajuda</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-circle-plus"></i>
+          <p>Feedback</p>
+        </button>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-language"></i>
+          <p>Idiomas</p>
+        </button>
+      </li>
+      <li>
+        <a href="../user-settings/user-information/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-gear"></i>
+            <p>Configurações</p>
+          </button>
+        </a>
+      </li>
+    </ul>
+  </aside>
+  <header>
+    <nav>
+      <ul class="nav flex">
+        <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium"
+            width="100px">
+        </li>
+        <li class="search-bar">
+          <div>
+            <form class="bg-search">
+              <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
+                    src="../img/searchIcon.svg" alt=""></i></button>
+              <input class="search-input" type="text" placeholder="O que você quer aprender?">
+            </form>
+          </div>
+        </li>
+        <li class="user-button">
+          <a href="../user/historic/index.html">
+            <div class="flex user-page">
+              <i class="fa-solid fa-user fa-2x"></i>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <script src="../components/sidebar/sidebar.js"></script>
-    <script src="../script.js"></script>
+  <main>
+    <div class="main-card flex">
+      <div class="username">Rodrigo Bezerra</div>
+      <div class="doubt">Meu VSCode aparece erro todas as vezes desde que comecei a usar o PHP. A imagem abaixo mostra o
+        erro. Alguém pode me ajudar?</div>
+      <img class="doubt-img" src="../img/logomarca-fundo-laranja.png" alt="">
+    </div>
+
+    <div class="write">
+      <div class="text-decoration flex">
+        <div class="decoration">Fonte</div>
+        <div class="decoration">Cor</div>
+        <div class="decoration">12</div>
+      </div>
+      <div class="type flex">
+        <form class="form-input" action="">
+          <input class="write-input" type="text" placeholder="Digite a solução aqui...">
+          <i class="ai-plus"></i>
+          <i class="ai-attach"></i>
+        </form>
+        <i class="ai-send flex"></i>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="links">
+      <div class="help-footer">
+        <a href="#">Ajuda - Perguntas Frequentes</a>
+      </div>
+      <div class="payment-footer">
+        <a href="#">Formas de Pagamento</a>
+      </div>
+      <div class="social-media-footer">
+        <a href="#">Contatos e Redes Sociais</a>
+      </div>
+    </div>
+    <div class="autores">
+      <p> Site feito por: Lucas Morais - Marcos Vinícius - Douglas Balbino - João Victor - Adenilça Souza</p>
+      <p>Copyright &copy; Todos os direitos reservados</p>
+    </div>
+
+  </footer>
+
+  <script src="../components/sidebar/sidebar.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
