adicionando sidebar na login page

--- a/user/historic/index.html
+++ b/user/historic/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
+                    <img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
                 </li>
                 <li class="search-bar">
                     <div>
