--- a/login-page/index.html
+++ b/login-page/index.html
@@ -54,94 +54,59 @@
     </header>
     <ul>
       <li>
-        <a href="#"><button type="button" onclick="onClick(this)">
+        <a href="../login-page/index.html"><button type="button" onclick="onClick(this)">
             <i class="ai-home-alt1"></i>
             <p>Início</p>
           </button></a>
       </li>
       <li>
-        <a href="../user/who-follow/index.html">
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-person-check"></i>
+          <p>Perfil</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <a href="../user/historic/index.html">
+                <button type="button">Histórico</button>
+              </a>
+            </li>
+            <li>
+              <a href="../user/who-follow/index.html">
+                <button type="button">Quem eu sigo</button>
+              </a>
+            </li>
+            <li>
+              <a href="../user/favorite-roads/index.html">
+                <button type="button">Trilhas favoritas</button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+  
+      <li> <!-- ============= MARCOS =============== -->
+        <a href="../doug/article/article.html">
           <button type="button" onclick="onClick(this)">
-            <i class="ai-person-check"></i>
-            <p>Quem eu sigo</p>
+            <i class="ai-book-open"></i>
+            <p>Artigos</p>
           </button>
         </a>
       </li>
       <li>
-        <button type="button" onclick="onClick(this)">
-          <i class="ai-book-open"></i>
-          <p>Artigos</p>
-          <i class="ai-chevron-down-small"></i>
-        </button>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Display</button>
-            </li>
-            <li>
-              <button type="button">Appearance</button>
-            </li>
-            <li>
-              <button type="button">Preferences</button>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <button type="button" onclick="onClick(this)">
-          <i class="ai-folder-add"></i>
-          <p>Exercícios</p>
-          <i class="ai-chevron-down-small"></i>
-        </button>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Article</button>
-            </li>
-            <li>
-              <button type="button">Document</button>
-            </li>
-            <li>
-              <button type="button">Video</button>
-            </li>
-            <li>
-              <button type="button">Presentation</button>
-            </li>
-          </ul>
-        </div>
+        <a href="../doug/exercises/exercises.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-folder-add"></i>
+            <p>Exercícios</p>
+          </button>
+        </a>
       </li>
       <li>
         <a href="../doug/comunity/comunity.html">
           <button type="button" onclick="onClick(this)">
             <i class="ai-people-group"></i>
             <p>Comunidade</p>
-            <i class="ai-chevron-down-small"></i>
-          </button>
-        </a>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Avatar</button>
-            </li>
-            <li>
-              <button type="button">Theme</button>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <a href="../user/historic/index.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-history"></i>
-            <p>Histórico</p>
-          </button>
-        </a>
-      </li>
-      <li>
-        <a href="../user/favorite-roads/index.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-heart"></i>
-            <p>Trilhas Favoritas</p>
           </button>
         </a>
       </li>
@@ -154,18 +119,36 @@
         </a>
       </li>
       <li>
-        <a href="./doug/help/help-page.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-question"></i>
-            <p>Ajuda</p>
-          </button>
-        </a>
-      </li>
-      <li>
         <button type="button" onclick="onClick(this)">
-          <i class="ai-circle-plus"></i>
-          <p>Feedback</p>
+          <i class="ai-question"></i>
+          <p>Ajuda</p>
+          <i class="ai-chevron-down-small"></i>
+  
         </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <a href="../doug/help/help-page.html">
+                <button type="button">Perguntas Frequentes</button>
+              </a>
+            </li>
+            <li>
+              <a href="../doug/help/help-page.html">
+                <button type="button">Sobre</button>
+              </a>
+            </li>
+            <li>
+              <a href="../doug/help/help-page.html">
+                <button type="button">Feedback</button>
+              </a>
+            </li>
+            <li>
+              <a href="../doug/help/help-page.html">
+                <button type="button">Suporte</button>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
       <li>
         <button type="button" onclick="onClick(this)">
@@ -183,7 +166,7 @@
       </li>
     </ul>
   </aside>
-  <script src="./sidebar.js"></script>
+  <script src="../sidebar.js"></script>
   <main class="grid-container">
     <div class="container">
       <div class="panel flex active">
